# file-encryption-system

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  trajectory_b_response.txt
file_storage/: __init__.py  __main__.py  access_control.py  audit.py  cli.py  constants.py  crypto.py  errors.py  file_format.py  integrity.py  key_manager.py  key_store.py  permissions.py  role_store.py  user_store.py  utils.py
tests/: conftest.py  test_access_control.py  test_audit.py  test_cli.py  test_cli_rbac.py  test_crypto.py  test_edge_cases.py  test_file_format.py  test_integrity.py  test_key_manager.py  test_key_store.py  test_role_store.py  test_user_store.py
