[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file_storage"
version = "0.1.0"
description = "CLI file encryption tool with full key lifecycle management"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
]

[project.scripts]
file_storage = "file_storage.cli:main_entry"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
